# iCalPregnancy

./: .dockerignore  .env_sample  Dockerfile  README.md  app.py  createICal.py  pyproject.toml
.github/workflows/: docker-publish.yml
calenderCalc/: __init__.py  iCal.py
templates/: index.html
